--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-firebase/app": "^16.4.5",
+    "@react-native-firebase/auth": "^16.4.6",
     "@react-native-firebase/database": "^16.4.5",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.4",
