--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-firebase/app": "^16.4.6",
     "@react-native-firebase/auth": "^16.4.6",
+    "@react-native-firebase/storage": "^16.4.6",
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/stack": "^6.3.5",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-image-picker": "^4.10.1",
     "react-native-otp-verify": "^1.1.4",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
